--- a/index.html
+++ b/index.html
@@ -91,20 +91,23 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1(646)427-1974</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 (646) 427-1974</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>hd2521@columbia.edu</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master's Student</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master of Science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Major:</strong> <span>Mechanical Engineering</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              I am a highly motivated mechanical engineering graduate from Worcester Polytechnic Institute. I am currently pursuing a Master of Science in Mechanical Engineering at Columbia University, with a focus on robotics and control theory. I have gained valuable professional experience through internships at companies such as Agora, Siemens Gamesa Renewable Energy, Co-op project with iRobot, and Intel, where I have contributed to various projects and developed my skills in machine design, microcomputers, informatization, and a little bit coding. Additionally, I have completed several projects in areas such as data analysis. I am excited to continue to apply my skills and knowledge to tackle new challenges in the field of mechanical engineering.
+              I am a highly motivated mechanical engineering graduate from Worcester Polytechnic Institute. I am currently pursuing a Master of Science in Mechanical Engineering at Columbia University, 
+              with a focus on robotics and control theory. I have gained valuable professional experience through internships at companies such as AUBO Collaborative Robot, Siemens Gamesa Renewable Energy, Co-op project with iRobot, 
+              and Intel, where I have contributed to various projects and developed my skills in SLAM, machine design, machine learning, microcomputers, informatization, and a little bit coding. Additionally, I have completed several projects in areas such as robot design, simulation, and data analysis. 
+              I am excited to continue to apply my skills and knowledge to tackle new challenges in the field of mechanical engineering.
             </p>
           </div>
         </div>
@@ -200,6 +203,13 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">ROS Humble<i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
           </div>
 
           <div class="col-lg-6">
@@ -219,14 +229,21 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val">70%</i></span>
+              <span class="skill">Python <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Arduino & Raspberry Pi<i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Gazebo<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -261,6 +278,20 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Robotics filter-Design">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Compound 1.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Compound Robot Simulation</h4>
+                <p>Robotics</p>
+                <div class="portfolio-links">
+<!--                   <a href="assets/img/portfolio/Robot Dog 1.JPG" data-gallery="portfolioGallery" class="portfolio-Robot Dog" title="Robot Dog"><i class="bx bx-plus"></i></a>
+ -->                  <a href="compound robot.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-Robotics filter-Design">
             <div class="portfolio-wrap">
@@ -444,7 +475,7 @@
                 <h3 class="resume-title">Campus Experience</h3>
                 <div class="resume-item">
                   <h4>Course Assistant</h4>
-                  <h5>Jan 2023 - Present</h5>
+                  <h5>Jan 2023 - May 2023</h5>
                   <p><em>Columbia University, New York, NY </em></p>
                   <ul>
                     <li>Assisted the professor in the MECE4304 Turbomachinery course by grading homework assignments, providing timely feedback to students, and printing exams</li>
@@ -467,9 +498,20 @@
               <div class="col-lg-6">
                 <h3 class="resume-title">Professional Experience</h3>
                 <div class="resume-item">
+                  <h4>Intern in Algorithm Research and Development</h4>
+                  <h5>Jun 2023 - Aug 2023</h5>
+                  <p><em>AUBO Collaborative Robot, Beijing, China</em></p>
+                  <ul>
+                    <li>Used Gazebo within ROS2 Humble system to build a testing environment with suspended objects, QR code labels, lathe, and small workpieces</li>
+                    <li>Conducted simulations to test AGV and its assembly robotic arm. The AGV featured diagonal lasers, front and rear cameras, IMU, and encoders, while the robotic arm was a 6-DOF product equipped with a camera on the end effector</li>
+                    <li>Demonstrated expertise in controlling AGV base and robotic arm movements in the simulation, including object-grasping</li>
+                    <li>Studied and delivered comprehensive lesson on the ROS2 system to colleagues in the Control, Modeling, and Path Planning teams during departmental meeting, providing reference material for the upcoming robot arm project</li>
+                  </ul>
+                </div>
+                <div class="resume-item">
                   <h4>Intern</h4>
                   <h5>Mar 2022 - Jul 2022</h5>
-                  <p><em>Agora, Beijing, China </em></p>
+                  <p><em>Agora, Beijing, China</em></p>
                   <ul>
                     <li>Conducted research and calculated the carbon emissions savings potential of metaverse activities. The data was later included in a white paper jointly developed with Tencent and presented to government departments</li>
                     <li>Conducted research and created daily news cards on the topic of the metaverse. These cards were then posted to a group consisting of representatives from various cooperating companies for updates and as reference materials</li>
@@ -780,8 +822,8 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+<!--         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div> -->
     </div>
   </footer><!-- End Footer -->
 
